--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -2,27 +2,41 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.1.0/dist/quartz/bootstrap.min.css">
+    <style>
+        .card-deck-header {
+            margin-bottom: 20px;
+
+        }
+    </style>
 </head>
 <body>
 <div class="container">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <div class="container-fluid"><div class="navbar-nav">
-            <a class="navbar-brand" href="#">Date4u</a>
-            <a class="nav-item nav-link" href="/index">Home</a>
-            <a class="nav-link nav-item" href="/profile">Profile</a>
-            <a class="nav-link nav-item" href="/search">Search</a>
-        </div></div>
+        <div class="container-fluid">
+            <div class="navbar-nav">
+                <a class="navbar-brand" href="#">Date4u</a>
+                <a class="nav-item nav-link" href="/index">Home</a>
+                <a class="nav-link nav-item" href="/profile">Profile</a>
+                <a class="nav-link nav-item" href="/search">Search</a>
+            </div>
+        </div>
     </nav>
     <div class="jumbotron">
         <h1 class="display-4">Suche</h1>
 
-        <table>
-        <tr data-th-each="profile : ${profiles}">
-            <td data-th-text="${profile.id}">ID</td>
-            <td data-th-text="${profile.nickname}">NICKNAME</td>
-            <td data-th-text="${profile.hornlength}">HORNLENGTH</td>
-        </tr>
-        </table>
+        <div class="row card-deck">
+            <div data-th-each="profile : ${profiles}" class="card col-md-3 mb-3 mx-0">
+                <div class="card-body">
+                    <img class="card-img-top img-fluid" th:if="${not #lists.isEmpty(profile.photos)}"
+                         th:src="@{/api/photos/{id}(id=${profile.photos.get(0).name})}" width="200" height="200">
+                    <h5 class="card-title" data-th-text="${profile.nickname}">NICKNAME</h5>
+                    <p class="card-text" data-th-text="${profile.hornlength}">HORNLENGTH</p>
+                    <p class="card-text" data-th-text="${profile.id}">ID</p>
+                    <!-- Weitere Informationen zu jedem Profil anzeigen -->
+                    <a th:href="@{/profile/{id}(id=${profile.id})}" class="btn btn-primary">Profil anzeigen</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
